--- a/package.json
+++ b/package.json
@@ -8,13 +8,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "immer": "^3.2.0",
+    "intl": "^1.2.5",
+    "jsc-android": "^241213.1.0",
+    "polished": "^3.4.1",
     "react": "16.8.6",
+    "react-icons": "^3.7.0",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.0",
     "react-navigation-stack": "^1.5.1",
-    "reactotron-react-native": "^3.6.5"
+    "react-redux": "^7.1.1",
+    "reactotron-react-native": "^3.6.5",
+    "reactotron-redux": "^3.1.1",
+    "reactotron-redux-saga": "^4.2.2",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
